Fix badge width on IE

--- a/styles/Indicators/Badge.styl
+++ b/styles/Indicators/Badge.styl
@@ -6,7 +6,6 @@
 	border-radius: $widgetBorderRadius * 2
 
 	padding: 2px 8px
-	min-width: 26px
 
 	color: $baseFontColor
 	white-space: nowrap // Numbers shouldn't wrap
